crates/seele-composer/src/tests/snapshots/seele__composer__execute__tests__execute_submission@submission_complex_1.yaml.snap
---
source: src/composer/execute.rs
expression: results
input_file: src/composer/tests/submission_complex_1.yaml
---
[
  Config(
    action: "seele/noop@1",
    test: 1,
  ),
  Config(
    action: "seele/noop@1",
    test: 201,
  ),
  Config(
    action: "seele/noop@1",
    test: 202,
  ),
  Config(
    action: "seele/noop@1",
    test: 301,
  ),
  Config(
    action: "seele/noop@1",
    test: 302,
  ),
  Config(
    action: "seele/noop@1",
    test: 303,
  ),
]
